--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,15 @@
     </properties>
 
     <dependencies>
+        <!--javax.servlet-api отвечает за спецификацию сервлетов. Scope “provided” нужен во время разработки,
+        но не нужен в рантайме (у Tomcat уже есть эта зависимость в папке lib)-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <!--jstl – можно рассматривать как шаблонизатор-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
